Simplifyed logic for returning new bid and for checking if one date is before other, change table column name (price and cerationDateTime) in bid entity, added some tests for the DateUtil class